# pesozio

./: CMakeLists.txt
src/: main.cpp  main_text_editor.cpp
